--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.0",
     "class-variance-authority": "^0.7.0",
+    "@vercel/analytics":"^1.4.1",
+    "@vercel/speed-insights":"^1.1.0",
     "clsx": "^2.0.0",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
